# akshare-data-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  imports.txt  pyproject.toml  reconciliation_baseline.md  requirements.txt  test_completeness.py  test_write_check.py  validate_schemas.py  verify_service.py  write_lixinger_p1.py
config/: akshare_registry.yaml  rate_limits.yaml  schemas.yaml  system.yaml
docs/: 01-overview.md  02-api-reference.md  03-data-sources.md  04-storage-layer.md  05-core-modules.md  06-offline-tools.md  07-schema-registry.md  08-cache-strategy.md  09-error-handling.md  09-sources-test-report.md  10-error-handling.md  10-migration-guide.md  11-migration-guide.md  12-configuration-reference.md  13-glossary.md  14-getting-started.md  CLI_REFERENCE.md  README.md
examples/: README.md  __init__.py  _example_utils.py  example_analyst_rank.py  example_balance_sheet.py  example_basic_info.py  example_block_deal.py  example_call_auction.py  example_capital_change.py  example_cash_flow.py  example_chip_distribution.py  example_concept_list.py  example_concept_performance.py  example_concept_stocks.py  example_conversion_bond_daily.py  example_conversion_bond_list.py  example_convert_bond_premium.py  example_convert_bond_spot.py  example_convertible_bond.py  example_daily.py  example_dividend_by_date.py  example_dragon_tiger.py  example_dragon_tiger_list.py  example_earnings_forecast.py  example_equity_freeze.py  example_equity_pledge.py  example_equity_pledge_rank.py  example_esg_rank.py  example_esg_rating.py  example_etf.py  example_finance_indicator.py  example_financial_metrics.py  example_fof_list.py  example_fof_nav.py  example_fund.py  example_fund_open_daily.py  example_fund_open_info.py  example_fund_open_nav.py  example_futures.py  example_futures_daily.py  (+61 more)
reports/: pipeline-demo-market_quote_daily.md
tests/: conftest.py  (+71 more)
(+772 files in other folders)
